create github pages

--- a/About.html
+++ b/About.html
@@ -75,7 +75,7 @@
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-5">Trending</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black text-primary display-4" href="About.html#content10-2k" target="_blank">About&nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-m">
+                </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="About.html#contacts2-2l" target="_blank">
                         Contact Us
                     </a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Disclaimer.html#header16-2a" target="_blank">
                         Disclaimer
@@ -181,8 +181,7 @@
         <div class="row">
             <!--Titles-->
             <div class="title col-12">
-                <h2 class="align-left mbr-fonts-style display-2"><strong>
-                    Our Contacts</strong><br>
+                <h2 class="align-left mbr-fonts-style display-2"><strong>Contacts Us</strong><br>
                 </h2>
                 
             </div>
@@ -243,7 +242,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fLfcRAPiIPHqiED5JKdpzacTmPPp/1eDOqTvtNzZo/w72T2CUEVrqJnof71+kGfDPvqmQjRWF2qZ4gSFw/7G8/bnXjuSAXmI2o9O2OmMQAaHU6oyoo8pGnm+86yg1bzE">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BrzWHIkOfj9XvtYBaJlrqUcMO4GfC0ZTy5Nsa6a+9dUeRI3VM79UlI35AI81tOaapbeDx/0DG/XEpCRA9rb1bkOILxEFotvVj9vmLupMcIDeBhjF3kypvFe6fCM1j39K">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -364,7 +363,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to build a website - <a href="https://mobirise.site/x" style="color:#aaa;">Get now</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web page software - <a href="https://mobirise.site/o" style="color:#aaa;">Visit site</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
