--- a/About.html
+++ b/About.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
-                        Instagram</h4>
+                        <a href="https://www.instagram.com/p_v_s_official" class="text-black" target="_blank"><strong>Instagram</strong></a></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         This Is My Instagram Account Follow Us&nbsp; On Instagram We Post Our All Videos On Instagram Also.
                     </p>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
-                        You Tube</h4>
+                        <a href="https://www.youtube.com/channel/UC1p6t6yQHDRL2XOKXIXe84w?sub_confirmation=1" class="text-black" target="_blank"><strong>You Tube</strong></a></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         You Tube Is Biggest Platform In Whole World I Upload Some Videos On It I Think You Like To Watch.
                     </p>
@@ -152,11 +152,11 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <a href="https://chat.whatsapp.com/D8WzTy3QicP4Ud1VtBGSKM"><span class="mbr-iconfont socicon-whatsapp socicon"></span></a>
+                    <a href="https://chat.whatsapp.com/D8WzTy3QicP4Ud1VtBGSKM" target="_blank"><span class="mbr-iconfont socicon-whatsapp socicon"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
-                        WhatsApp Group</h4>
+                        <a href="https://chat.whatsapp.com/D8WzTy3QicP4Ud1VtBGSKM" class="text-black" target="_blank"><strong>Whats App Group</strong></a></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         Join Our Whats App group For Notification On Our New Videos Upload On Each Paltform</p>
                 </div>
@@ -242,7 +242,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BrzWHIkOfj9XvtYBaJlrqUcMO4GfC0ZTy5Nsa6a+9dUeRI3VM79UlI35AI81tOaapbeDx/0DG/XEpCRA9rb1bkOILxEFotvVj9vmLupMcIDeBhjF3kypvFe6fCM1j39K">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="739VOrrWlL4tuLwKumG8aXJ8lmA7hK3yBC9MSGvsru3R0zgnz9wzAjHdAkE5lyPr1wU+UqfOT1wDlJSvoV93wbU36cxWeVnS/nLO8R0vbnzGCjL31IU4jpkF25STxAgi">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -363,7 +363,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web page software - <a href="https://mobirise.site/o" style="color:#aaa;">Visit site</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i" style="color:#aaa;">Designed with Mobirise</a> free maker</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
